week wise calendar UI implemented and alignment fix

--- a/src/app/core/core/header/header.component.scss
+++ b/src/app/core/core/header/header.component.scss
@@ -296,6 +296,7 @@
     display: inline-block;
     animation-name: textHide;
     animation-duration: 0.2s;
+    animation-delay: 0.2s;
     animation-fill-mode: backwards;
   }
 }
